compile_fail_tests/destructure/struct_destructure.stderr
error[E0493]: destructor of `Wrap<T>` cannot be evaluated at compile-time
 --> compile_fail_tests/destructure/struct_destructure.rs:6:25
  |
6 |     const fn into_inner(self) -> T {
  |                         ^^^^ the destructor for this type cannot be evaluated in constant functions
...
9 |     }
  |     - value is dropped here
